<resources>
    <string name="app_name">Fingularium</string>
    <string name="submit_button">OK</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="text_in_english">Text in English</string>
    <string name="text_in_finnish">Text in Finnish</string>
    <string name="herra_hakkarainen">Herra Hakkarainen</string>
    <string name="listen_read_speak_repeat">Listen, read, speak, repeat...</string>
    <string name="headingFI">Tasavallan presidentin uudenvuodenpuhe 2020</string>
    <string name="headingEN">President of the Republic Sauli Niinistö’s New Year’s Speech 2020</string>
    <string name="play_button">Play Button</string>
    <string name="current_time">03:13</string>
    <string name="total_time">6:12</string>
    <string name="statistics">Statistics</string>
    <string name="quiz_results">Quiz results</string>
    <string name="wiktionary" href='http://www.google.com'> Wiktionary</string>
    <string name="babla">Babla</string>
    <string name="feedback">Feedback</string>
    <string name="listen">Listen</string>
    <string name="read">Read</string>
    <string name="quiz">Quiz</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="passes">Passes</string>
    <string name="_1">1</string>
    <string name="fails">Fails</string>
    <string name="_0">0</string>";
</resources>

