<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/blank"
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="116dp"
        android:layout_marginLeft="50pt"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/herrahakkarainen"
        android:contentDescription="@string/herra_hakkarainen"
        android:layout_marginStart="50pt" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:fontFamily="@font/montserrat_regular" />

    <TextView
        android:id="@+id/subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/listen_read_speak_repeat"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/montserrat_regular" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <ListView
        android:id="@+id/itemListView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:divider="#FFFFFF"
        android:dividerHeight="1dp"
        android:layout_alignParentLeft="true" />
</LinearLayout>