<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="@string/headingFI"
        android:textColor="@color/boldfont"
        android:textSize="20sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nicknameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="@string/headingEN"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/readButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/readold_sm"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <Button
        android:id="@+id/listenButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/listen_sm"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Button
        android:id="@+id/quizButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/write_sm"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <Button
        android:id="@+id/vocabularyButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/speak_sm"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="285dp"
        android:layout_height="285dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicknameTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listen"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintBottom_toTopOf="@+id/listenButton"
        app:layout_constraintStart_toStartOf="@+id/listenButton" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintBottom_toTopOf="@+id/readButton"
        app:layout_constraintEnd_toEndOf="@+id/readButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toStartOf="@+id/quizButton"
        app:layout_constraintTop_toBottomOf="@+id/quizButton" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vocabulary"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="@+id/vocabularyButton"
        app:layout_constraintTop_toBottomOf="@+id/vocabularyButton" />

</androidx.constraintlayout.widget.ConstraintLayout>